# weekly-playlist-downloader

./: Cargo.toml  flake.nix
src/: listenbrainz_playlist.rs  main.rs  tasks.rs  ytdlp_manager.rs
src/tasks/: download.rs  search.rs
